homeworks/kuber/kuber-04/mtool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtool
  labels:
    tier: node
    app: mtool
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: node
      app: mtool
  template:
    metadata:
      labels:
        tier: node
        app: mtool
    spec:
      tolerations:
      - operator: Exists
        effect: NoSchedule
      containers:
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: http-port
        - containerPort: 8443
          name: https-port
        resources:
          requests:
            cpu: "1m"
            memory: "20Mi"
          limits:
            cpu: "10m"
            memory: "20Mi"
        securityContext:
          runAsUser: 0
          capabilities:
            add: ["NET_ADMIN"]
---
