homeworks/kuber/kuber-04/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
  namespace: app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      containers:
      - image: registry.gitlab.com/wuestkamp/k8s-deployment-example-app:v1
        imagePullPolicy: Always
        name: python
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v2
  namespace: app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: backend
      version: v2
  template:
    metadata:
      labels:
        app: backend
        version: v2
    spec:
      containers:
      - image: registry.gitlab.com/wuestkamp/k8s-deployment-example-app:v2
        imagePullPolicy: Always
        name: python
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  labels:
    app: backend
  name: backend
spec:
  ports:
  - port: 80
    name: http
    targetPort: 5000
    protocol: TCP
  selector:
    app: backend
  type: ClusterIP
