homeworks/kuber/kuber-04/nginx-depl-04.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
  namespace: app
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 4
       maxUnavailable: 4
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.19
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: app
spec:
  selector:
    app: nginx
  ports:
  - name: nginx-tcp-port
    protocol: TCP
    port: 80
    targetPort: 80
