homeworks/kuber/kuber-04/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gw
  namespace: app
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP2
    hosts:
    - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
  namespace: app
spec:
  gateways:
  - app-gw
  hosts:
  - "*"
  http:
  - match:
    - {}
    route:
    - destination:
        host: backend.app.svc.cluster.local
        subset: v1
        port:
          number: 80
      weight: 0
    - destination:
        host: backend.app.svc.cluster.local
        subset: v2
        port:
          number: 80
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
  namespace: app
spec:
  host: backend.app.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
